--- a/ranch-hand-app/client/public/index.html
+++ b/ranch-hand-app/client/public/index.html
@@ -30,7 +30,12 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/react-table-v6@latest/react-table.css"
+    />
 
+    <link rel="stylesheet" href="node_modules/react-table-v6/react-table.css" />
     <title>Ranch Hand App</title>
   </head>
   <body>
